# actix-web-oidc-sample

./: .env.sample  Cargo.toml  README.md
src/: main.rs  oidc_config.rs  oidc_handlers.rs
