[package]
name = "actix-web-oidc"
version = "0.1.0"
authors = ["auther"]
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-session = { version = "0.8.0", features=["cookie-session"] }
actix-utils = "3.0.1"
cookie = "0.16.0"
env_logger = "0.11.3"
dotenv = "0.15.0"
reqwest = { version = "0.12.3", features=["native-tls"] }
oauth2 = "4.4.2"
serde = "1.0.197"
serde_qs = "0.12.0"
serde_json = "1.0.115"
base64 = "0.21.7"
anyhow = "1.0.82"
regex = "1.10.4"
rand = "0.8.5"
sha1 = "0.10.6"
chrono = "0.4.38"
urlencoding = "2.1.3"
